--- a/website01.html
+++ b/website01.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qatar World Cup</title>
+    <title>Qatar World Cup 2022</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 
     <!-- Using Google Font: Poppins -->
@@ -90,7 +90,7 @@
             <div class="blog-sidebar-menu">
 
               <a href="#">Blog</a>
-              
+
             </div>
 
           </div>
