--- a/Website 02/match-index.html
+++ b/Website 02/match-index.html
@@ -77,7 +77,7 @@
 
         <div class="features">
 
-          <a href="match-index.html" class="feature-btn activeMatch"
+          <a href="index.html" class="feature-btn activeMatch"
             >Upcoming Match</a>
           
           <a href="index.html" class="feature-btn">All Group</a>
